sass/main.scss
@import url('https://fonts.googleapis.com/css?family=Maven+Pro:400,700');

// VARIABLES
$font-base: 'Maven Pro', sans-serif;
$body-font-size: 18px;
$h1-font-size: 2.8em;
$h2-font-size: 2.4em;

$font-weight-bold: bold;
$font-weight-normal: normal;
$font-weight-light: 300;

$h1-font-color: #212121;
$h2-font-color: #000000;
$h3-font-color: #1b1b1b;
$body-font-color: #5b5b5b;
$text-white: #ffffff;
$dark-mode-color: #0c0c0d;
$main-color-old: #ffc200;
$main-color: #4c979b;
$border-color: #f2f2f1;
$button-color: #366a7f;
$small-color: #b1b1b1;
$modal-background: #272727;
$navbar-background: #464646;
$link-color: #074a4d;
$custom-button-shadow: #074a4db3;
$custom-button-shadow-hover: #4c979bb3;
$bodybg: #f5fcff;

$small-font-size: 14px;
$link-font-size: 16px;

@mixin transition-effect {
	transition: all 0.4s ease;
}

.footer-projects{
	position: absolute;
	bottom: 0;
	width: 100%;
}

.imgMap{
	background-image: url("../images/icons.png");
	width: 60px;
	height: 60px;
	display: inline-block;
}

.navbar .container{
	background: $bodybg !important;
}

body {
	font-family: $font-base;
	padding-top: 70px;
	background: $bodybg;
	transition: 0.3s;
}

.intermediateIcons{
	display: flex;
	justify-content: center;
	flex-wrap: wrap;
	img{
		width: 45px;
		height: 45px;
		margin-top: 0.5em;
	}
}

.full-screen {
	padding: 2rem 0;
}

.small-text {
    color: $body-font-color;
    font-size: $small-font-size;
    font-weight: $font-weight-bold;
    padding: 8px 16px;
    border-radius: 50px;
    letter-spacing: 0.2px;
}

.meImg{
	height: 50px;
	width: 50px;
	margin-right: 10px;
	background-repeat: no-repeat;
	background-position: 50%;
	border-radius: 50%;
	background-size: 100% auto;
	background-image: url("../images/me.jpeg");
    border-radius: 50%;
	box-shadow: 0;
}

small a{
	font-weight: bold;
	color: $main-color;
	&:hover{
		color: $link-color !important;
	}
}

ul {
	margin: 0;
	padding: 0;
	li {
		list-style: none;
	}
}

.main-color {
	color: $main-color;
}

a {
	font-size: $link-font-size;
	font-weight: $font-weight-normal;
	text-decoration: none !important;
	@include transition-effect;
	&:hover {
		color: $main-color !important;
	}
}

.navbar-brand {
	.uil {
		font-size: 40px;
	}
}


// TYPOGRAPHY
p {
	font-size: $body-font-size;
	font-weight: $font-weight-light;
	line-height: 1.5;
	color: $body-font-color;
}

h1,h2,h3,h4,h5,h6 {
	font-weight: $font-weight-bold;
	letter-spacing: -1px;
}

h1 {
	color: $h1-font-color;
	font-size: $h1-font-size;
	margin: 24px 0;
}

h2 {
	color: $h2-font-color;
	font-size: $h2-font-size;
	font-weight: $font-weight-bold;
}

h3 {
	color: $h3-font-color;
}

h3,
b, strong {
	font-weight: $font-weight-bold;
}


// CUSTOM BUTTON
.custom-btn {
	color: $body-font-color;
	font-weight: $font-weight-bold;
    border-radius: 50px;
    padding: 13px 29px;
    font-size: $small-font-size;
    line-height: normal;
    overflow: hidden;

	box-shadow: -7px 6px 9px 2px $custom-button-shadow;

    @include transition-effect;
    &:hover {
    	color: $main-color;
    }
	&:active{
		transform: translateY(4px);
	}
    &.custom-btn-bg {
    	background: $button-color;
		color: $text-white;
		&:hover {
	    	background: $main-color;
	    	color: $text-white !important;
			box-shadow: -7px 6px 9px 2px $custom-button-shadow-hover;
	    }
    }
}

.imgPrincipal{
	width: 320px;
}
.about-image{
	text-align: end;
}

// ANIMATED TEXT
.animated {
    position: relative;
}

.animated-info {
    display: inline-block;
    vertical-align: top;
    margin-top: 10px;
    width: 250px;
    position: relative;
}

.animated-item {
	color: $main-color;
    font-size: 32px;
    line-height: inherit;
    display: block;
	min-width: 115%;
}

@keyframes BottomTotop {
    0% { opacity: 0; }
    5% { opacity: 0; transform: translateY(5px); }
    10% { opacity: 1; transform: translateY(0px); }
    25% { opacity: 1; transform: translateY(0px); }
    30% { opacity: 0; transform: translateY(5px); }
    80% { opacity: 0; }
    100% { opacity: 0; }
}

//MODAL
.listaAboutMe{
	padding: 0 0 0 2em;
}
.aboutMeTitles{
	font-weight: bold;
}

// MENU
.navbar {
	position: fixed;
    top: 0;
    right: 0;
    left: 0;
    z-index: 999999;
    will-change: transform;
    transition: transform 200ms linear;
    &[class*="headroom--not-top"] {
    	background: #f5fcff;
    	// box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.09);
    	border-bottom: 1px solid $bodybg;
    	padding-top: 0;
    	padding-bottom: 0;
    }
}

.navbar-brand {
	font-weight: $font-weight-bold;
}

.navbar-expand-sm {
	.navbar-nav {
		.nav-link {
			padding: 0 20px;
		}
	}
}

.nav-link {
	font-weight: $font-weight-bold;
	font-size: 16px;
	overflow: hidden;
	span {
    	position: relative;
		display: inline-block;
		transition: transform 0.3s;
		&:before {
			position: absolute;
			top: 100%;
			content: attr(data-hover);
			transform: translate3d(0,0,0);
		}
    }
}

.navbar-light {
	.navbar-nav {
		.nav-link:focus,
		.nav-link:hover {
			color: $main-color;
			font-weight: $font-weight-bold;
			span {
	    		transform: translateY(-100%);
	    	}
		}
	}
} 


// HAMBURGER MENU
.navbar-light {
	.navbar-toggler-icon {
		background: none;
	}
}

.navbar-toggler {
	border: 0;
	padding: 0;
	width: 32px;
	height: 32px;
	line-height: 32px;
	outline: none;
	cursor: pointer;
	margin-right: 10px;
	&:focus {
		outline: none;
	}
	&[aria-expanded="true"] {
		.navbar-toggler-icon {
			&:first-child {
				transform: rotate(45deg);
				top: 6px;
			}
			&:nth-child(2) {
				display: none;
			}
			&:last-child {
				transform: rotate(-45deg);
				bottom: 1px;
			}
		}
	}
	.navbar-toggler-icon {
		background: $h1-font-color;
		display: block;
		width: 100%;
		height: 2px;
		margin: 5px 0;
		@include transition-effect;
		position: relative;
	}
}
/* ... */

